--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 <body>
     <div class="container">
         <header>
+            <p class="pdf-link">
+                <strong><a href="https://stopcannabis.github.io/marijuana_guide_rus.pdf" target="_blank">Открыть PDF версию руководства</a></strong>
+            </p>
             <h1>Руководство по отказу от употребления марихуаны и гашиша</h1>
-            <p>Центр лечения наркозависимости<br>Университетский госпиталь г. Лунд, Г. Лунд, Швеция</p>
-            <div class="contact-info">
-                <p><strong>Адрес:</strong> Kioskgatan 17, Lund University Hospital, 22185 Lund, Sweden</p>
-                <p><strong>Тел:</strong> +46 46 178932 | <strong>Факс:</strong> +46 46 176092</p>
-                <p><strong>Электронная почта:</strong> <a href="mailto:Thomas.Lundqvist@med.lu.se">Thomas.Lundqvist@med.lu.se</a></p>
-            </div>
-            <p class="intro">Это практическое руководство для тех, кто всерьез хочет отказаться от употребления гашиша и марихуаны.</p>
         </header>
 
         <nav>
@@ -67,7 +63,7 @@
                     <h4>Первая фаза</h4>
                     <ul>
                         <li>Наступает спустя 10 минут после выкуривания сигареты с коноплей и длится около 45 минут.</li>
-                        <li>Курильщик испытывает **«кайф»** (примерно после четвертого или пятого употребления конопли).</li>
+                        <li>Курильщик испытывает «кайф» (примерно после четвертого или пятого употребления конопли).</li>
                     </ul>
                     <p>Наряду с этим проявляются некоторые <strong>физиологические симптомы</strong>:</p>
                     <ul>
@@ -463,7 +459,7 @@
                     <li><em>Cognitive dysfunctions in chronic cannabis users observed during treatment, an integrative approach</em>, Thomas Lundqvist, Almqvist & Wiksell International, Stockholm Sweden, 1995.</li>
                     <li><em>The health and psychological consequences of cannabis use, National Drug Strategy Monograph Series No. 25</em>, Wayne Hall, Nadia Solowij and Jim Lemon, National Drug and Alcohol Research Centre, Sidney, Australia, 1994.</li>
                 </ol>
-                <p><strong>Адрес:</strong> Rådgivningsbyrån i narkotikafrågor, Kyrkogatan 19, S-222 22 Lund, Sweden, Phone + 46 46 174955, Fax + 46 46 152511, **Email** <a href="mailto:thomas.lundqvist@neurokemi.lu.se">thomas.lundqvist@neurokemi.lu.se</a></p>
+                <p><strong>Адрес для справок:</strong> Rådgivningsbyrån i narkotikafrågor, Kyrkogatan 19, S-222 22 Lund, Sweden, Phone + 46 46 174955, Fax + 46 46 152511, Email <a href="mailto:thomas.lundqvist@neurokemi.lu.se">thomas.lundqvist@neurokemi.lu.se</a></p>
             </section>
         </main>
     </div>
