--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <p class="pdf-link">
                 <strong><a href="https://stopcannabis.github.io/marijuana_guide_rus.pdf" target="_blank">Открыть PDF версию руководства</a></strong>
+                <strong><a href="https://youtu.be/ue2jHFgH9W4?t=204" target="_blank">Аудио-версия руководства на Youtube</a></strong>
             </p>
             <h1>Руководство по отказу от употребления марихуаны и гашиша</h1>
         </header>
