--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <nav>
-            <h2>СТРУКТУРА РУКОВОДСТВА:</h2>
+            <h2>Содержание:</h2>
             <ul>
                 <li><a href="#osnovnye-fakty">Основные факты</a></li>
                 <li><a href="#kak-deistvuet">Как употребление конопли действует на меня?</a></li>
