--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 <body>
     <div class="container">
         <header>
-            <p class="pdf-link">
-                <strong><a href="https://stopcannabis.github.io/marijuana_guide_rus.pdf" target="_blank">PDF-версия руководства</a></strong><br>
-                <strong><a href="https://youtu.be/ue2jHFgH9W4?t=204" target="_blank">Аудио-версия руководства на Youtube</a></strong>
-            </p>
+		<div class="header-links">
+			<div class="contact-link">
+			    <p>Связь с автором этого сайта: <a href="mailto:extent-smite-cope@duck.com">extent-smite-cope@duck.com</a></p>
+			</div>
+			
+			<div class="guide-links">
+			    <p class="header-link">
+				<strong><a href="https://stopcannabis.github.io/marijuana_guide_rus.pdf" target="_blank">PDF-версия руководства</a></strong>
+			    </p>
+			    <p class="header-link">
+				<strong><a href="https://youtu.be/ue2jHFgH9W4?t=204" target="_blank">Аудио-версия руководства на Youtube</a></strong>
+			    </p>
+			</div>
+		    </div>
+		
             <h1>Руководство по отказу от употребления марихуаны и гашиша</h1>
         </header>
 
