--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
 		<div class="header-links">
 			<div class="contact-link">
-			    <p>Связь с автором этого сайта: <a href="mailto:extent-smite-cope@duck.com">extent-smite-cope@duck.com</a></p>
+			    <p>Связь с автором сайта: <a href="mailto:extent-smite-cope@duck.com">extent-smite-cope@duck.com</a></p>
 			</div>
 			
 			<div class="guide-links">
